--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "axios": "^0.17.1",
     "babel-preset-stage-1": "^6.1.18",
     "lodash": "^3.10.1",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "react-redux": "4.3.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "react-router": "^2.0.1",
     "react-sparklines": "^1.6.0",
-    "redux": "^3.0.4",
+    "redux": "^4.0.4",
     "redux-promise": "^0.5.3"
   }
 }
