--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-router": "^5.0.1",
     "react-sparklines": "^1.7.0",
     "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
     "redux-promise": "^0.6.0"
   }
 }
